# TIS3IL-WS25-Project

./: .gitignore  README.md  pyproject.toml
code/: 01-data-prep.ipynb  02-baseline.ipynb  02-ml-models.ipynb  02-neural-models.ipynb  02-stats-models.ipynb  03-visualization.ipynb  metrics.ipynb  save_as_csv.ipynb  splitting.ipynb  test.ipynb
data/models/: baseline_results.csv  best_neural_forecast_dec_jan.parquet  ml_models_results.csv  neural_models_results.csv  statsmodels_results.csv
data/processed/: processed_weather_data_michigan.csv
docs/: doc_preprocessing.md
docs/reports/: doc_preprocessing.md  documentation.md
docs/reports/presentation/: slides.pptx
