[project]
name = "tis3il-ws25-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "import-ipynb>=0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
