[project]
name = "tis3il-ws25-project"
version = "0.1.0"
description = "Time series forecasting project for TIS3IL WS25"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2025.12.0",
    "import-ipynb>=0.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
ml = [
    "lightgbm>=4.6.0",
    "mlforecast>=1.0.2",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
]
neural = [
    "neuralforecast>=3.1.2",
    "tirex-ts>=1.2.0",
]
stats = [
    "statsmodels>=0.14.5",
]
viz = [
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
]
